# voxel_game

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: linux.yml  macos.yml  rust.yml  windows.yml
assets/shaders/final/: shader.vert
assets/shaders/opaque/: shader.frag
assets/shaders/transparency/: shader.vert
client/: Cargo.toml
client/src/: lib.rs  main.rs
client/src/world/: chunk.rs  manager.rs  mod.rs  units.rs
engine/: Cargo.toml
engine/src/: lib.rs
engine/src/render/: mesh.rs  mod.rs  renderer.rs  shaders.rs  texture.rs
engine/src/render/interface/: console.rs  debug.rs  mod.rs
engine/src/utils/: camera.rs  debug.rs  mod.rs  timer.rs
libs/engine/: Cargo.toml
libs/engine/src/: lib.rs  mesh.rs  renderer.rs
libs/engine/src/ui/: mod.rs
libs/engine/src/utils/: camera.rs  clock.rs  filesystem.rs  mod.rs  texture.rs
libs/game/: Cargo.toml
libs/game/benches/: chunk.rs  terrain.rs  terrain_multithread.rs
libs/game/src/: game.rs
libs/game/src/ecs/components/: mod.rs
libs/game/src/ecs/systems/: mod.rs
libs/game/src/registry/: block.rs  mesh.rs  mod.rs
libs/game/src/terrain/: block.rs  chunk.rs  manager.rs  mesher.rs
res/shaders/: fragment.glsl  vertex.glsl
res/shaders/debug/: fragment.glsl  vertex.glsl
res/shaders/final/: shader.frag
res/shaders/transparency/: shader.frag
res/shaders/ui/: fragment.glsl  vertex.glsl
server/: Cargo.toml
server/src/: main.rs
shaders/: fragment.glsl  vertex.glsl
shaders/simple/: fragment.glsl  vertex.glsl
src/: lib.rs  main.rs  renderer.rs
src/engine/: mesh.rs  mod.rs  renderer.rs  ui.rs
src/engine/ui/: mod.rs
src/engine/utils/: camera.rs  clock.rs  mod.rs  raycast.rs  raycast_old.rs  texture.rs
src/game/: block.rs  game.rs  mod.rs  registry.rs
src/game/ecs/: mod.rs
src/game/ecs/components/: mod.rs
src/game/ecs/systems/: mod.rs
src/game/registry/: block.rs  mesh.rs  mod.rs
src/game/terrain/: block.rs  block_registry.rs  chunk.rs  chunk_manager.rs  chunk_mesher.rs  chunk_updater.rs  chunk_updater_new.rs  manager.rs  manager_old.rs  mesher.rs  mod.rs
src/render/: mesh.rs  mod.rs  renderer.rs
src/renderer/: mesh.rs  shaders.rs  texture.rs  uniforms.rs
src/utils/: camera.rs  frustum_culling.rs  mod.rs  raycast.rs  registry.rs  texture.rs  timer.rs
