[package]
name = "client"
version = "0.1.2"
authors = ["Richard <richardsoncusto@gmail.com>"]
description = "Simple voxel game"
repository = "https://github.com/derezzedex/voxel_game"
license = "GPL-3.0"
edition = "2018"

[profile.dev]
opt-level=2

[dependencies]
# Window & Input
winit = "0.23"

# Graphics
wgpu = "0.6.0"
image = "0.23"
glsl-to-spirv = "0.1.7"

# Math & Conversions
# glam = "0.10"
ultraviolet = { version="0.7.5", features=["bytemuck"] }
bytemuck = "1.4"

# Multithreading
futures = "0.3.4"
crossbeam = "0.8"
uvth = "4.0.1"

# Game
legion = "0.3"

# Error & Logging
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
