[package]
name = "client"
version = "0.1.2"
authors = ["derezzedex <richardsoncusto@gmail.com>"]
description = "Simple voxel game"
repository = "https://github.com/derezzedex/voxel_game"
license = "GPL-3.0"
edition = "2018"
readme = "README.md"
default-run="client"

[profile.dev]
opt-level=2

[dependencies]
engine = { path = "../engine" }

legion = "0.3"

glam = "0.10"
uvth = "4.0"
dashmap = "3.11.2"

log = "0.4.8"
fern = { version="0.6.0", features=["colored"] }
chrono = "0.4.11"
futures = "0.3.4"
