[package]
name = "engine"
version = "0.1.0"
authors = ["derezzedex <richardsoncusto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 2

[dependencies]
# Window & Input
winit = "0.23"

# Graphics
glsl-to-spirv = "0.1.7"
wgpu = "0.6.0"
image = "0.23"

# Math & Conversions
glam = "0.10"
bytemuck = "1.4"

# Multithreading
futures = "0.3.4"
crossbeam = "0.8"
uvth = "4.0.1"
dashmap = "3.11.2"

# Error & Logging
fern = { version="0.6.0", features=["colored"] }
anyhow = "1.0"
log = "0.4.8"
