[package]
name = "server"
version = "0.1.0"
authors = ["derezzedex <richardsoncusto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
laminar = "0.3.2"
bincode = "1.2.1"
specs = "0.16.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
